...
    case yourTrips
    case settings
    case logout
    
    var description: String {
        switch self {
        case .yourTrips: return "Заявки"
        case .settings: return "Настройки"
        case .logout: return "Выйти"
        }
    }
}

protocol MenuControllerDelegate: class {
    func didSelect(option: MenuOptions)
...
