...
        return UITextField().textField(withPlaceholder: "Пароль",
                                       isSecureTextEntry: true)
    }()
    
    private let loginButton: AuthButton = {
        let button = AuthButton(type: .system)
        button.setTitle("ВОЙТИ В СИСТЕМУ", for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 18)
        button.layer.cornerRadius = 25
        button.backgroundColor = .mainOrangeTint
        button.addTarget(self, action: #selector(handleLogin), for: .touchUpInside)
        return button
    }()
...
